@@ -11,7 +11,10 @@ Build-Depends: debhelper (>= 8),
  libpam0g-dev,
  libselinux1-dev [linux-any],
  gtk-doc-tools,
- xsltproc
+ xsltproc,
+ libgirepository1.0-dev (>= 0.9.12),
+ gobject-introspection (>= 0.9.12-4~),
+ gir1.2-glib-2.0
 Standards-Version: 3.9.1
 Vcs-Git: git://git.debian.org/git/pkg-utopia/policykit.git
 Vcs-Browser: http://git.debian.org/?p=pkg-utopia/policykit.git;a=summary
@@ -103,3 +106,16 @@ Description: PolicyKit backend API - development files
  .
  This package contains the development files for the library found in
  libpolkit-backend-1-0.
+
+Package: gir1.2-polkit-1.0
+Section: libs
+Architecture: any
+Depends: ${gir:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Description: GObject introspection data for PolicyKit
+ PolicyKit is a toolkit for defining and handling the policy that
+ allows unprivileged processes to speak to privileged processes.
+ .
+ This package contains introspection data for PolicyKit.
+ .
+ It can be used by packages using the GIRepository format to generate
+ dynamic bindings.
