@@ -1,3 +1,4 @@
 usr/lib/libpolkit-agent*.{so,a}
 usr/lib/pkgconfig/polkit-agent*.pc
 usr/include/polkit-1/polkitagent/
+usr/share/gir-1.0/PolkitAgent-1.0.gir
