@@ -1,3 +1,4 @@
 usr/lib/libpolkit-gobject*.{so,a}
 usr/lib/pkgconfig/polkit-gobject*.pc
 usr/include/polkit-1/polkit/
+usr/share/gir-1.0/Polkit-1.0.gir
