@@ -11,10 +11,14 @@ override_dh_auto_configure:
 	dh_auto_configure -- \
 		--enable-gtk-doc \
 		--enable-man-pages \
-		--enable-introspection=no
+		--enable-introspection=yes
 
 override_dh_makeshlibs:
 	dh_makeshlibs -Xusr/lib/polkit-1/
+
+override_dh_shlibdeps:
+	dh_shlibdeps
+	dh_girepository
 
 override_dh_install:
 	dh_install
